# text-layout-render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
minikin/: CmapCoverage.cpp  CmapCoverage.h  Emoji.cpp  FontCollection.cpp  FontCollection.h  FontFamily.cpp  FontFamily.h  FontLanguageListCache.cpp  FontLanguageListCache.h  GraphemeBreak.cpp  HbFontCache.cpp  Hyphenator.cpp  Layout.cpp  Layout.h  LineBreaker.cpp  LineBreaker.h  Measurement.cpp  Measurement.h  MinikinFont.cpp  MinikinFont.h  MinikinInternal.cpp  MinikinInternal.h  SparseBitSet.cpp  WordBreaker.cpp
res/: fs.glsl  vs.glsl
src/: CacheTexture.cpp  CacheTexture.h  FontManager.cpp  FontManager.h  FontMetrics.h  FontRenderer.cpp  FontRenderer.h  FontStyle.h  GLRenderer.cpp  GLRenderer.h  GlyphInfo.h  JenkinsHash.cpp  JenkinsHash.h  LayoutFont.cpp  LayoutFont.h  LruCache.h  Matrix4x4.cpp  Matrix4x4.h  MeshState.cpp  MeshState.h  PixelBuffer.cpp  PixelBuffer.h  Program.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureRect.h  TextureState.cpp  TextureState.h  Typeface.cpp  Typeface.h  Util.cpp  Util.h  Vector.h  Vertex.h  font_collection.cc  font_collection.h  main.cpp  paint_record.cc  (+13 more)
